--- a/easyweb/article.html
+++ b/easyweb/article.html
@@ -20,26 +20,118 @@
             <p class="left">长文本模版</p>
             <p class="right">测试版本</p>
         </div>
-        <div class="pg-right">
+        <div class="pg-right" id="pgtype">
             <div class="left">
-                <div class="lls"><i class="icon zsh sh-xiahuaxian"></i>文本模板</div>
-                <div class="lls lls-active"><i class="icon zsh sh-tupian"></i>图片模板</div>
-                <div class="lls"><i class="icon zsh sh-tuwen_o"></i>图文模板</div>
-                <div class="lls"><i class="icon zsh sh-xingzhuang-jianxing"></i>形状模板</div>
-                <div class="lls"><i class="icon zsh sh-yinyue"></i>音乐</div>
+                <div class="lls" :class="{'lls-active':type_active=='text'}" @click="change('text')"><i class="icon zsh sh-xiahuaxian"></i>文本模板</div>
+                <div class="lls" :class="{'lls-active':type_active=='pic'}" @click="change('pic')"><i class="icon zsh sh-tupian"></i>图片模板</div>
+                <div class="lls" :class="{'lls-active':type_active=='text_pic'}" @click="change('text_pic')"><i class="icon zsh sh-tuwen_o"></i>图文模板</div>
+                <div class="lls" :class="{'lls-active':type_active=='shape'}" @click="change('shape')"><i class="icon zsh sh-xingzhuang-jianxing"></i>形状模板</div>
+                <div class="lls" :class="{'lls-active':type_active=='music'}" @click="change('music')"><i class="icon zsh sh-yinyue"></i>音乐</div>
             </div>
-            <div class="cont">
+            <div class="cont" v-show="type_active=='text'">
+                <div class="exps" v-for="(item,key,index) in template_text"><component-boxer :easy-data="easy_module_data[item]" :easy-name="item"></component-boxer></div>
+            </div>
+            <div class="cont" v-show="type_active=='pic'">
                 <div class="exps">
-                    大标题
+                    t大标题
                 </div>
                 <div class="exps">
-                    标题
+                    t标题
                 </div>
                 <div class="exps">
-                    副标题
+                    t副标题
+                </div>
+            </div>
+            <div class="cont" v-show="type_active=='text_pic'">
+                <div class="exps">
+                    tw大标题
+                </div>
+                <div class="exps">
+                    tw标题
+                </div>
+                <div class="exps">
+                    tw副标题
                 </div>
             </div>
         </div>
+        <div class="pg-setbox">
+            <div class="pgs-boxer">
+                <div class="pgs-til">文本设置</div>
+                <div class="pgs-elines">
+                    <div class="pgs-eline">
+                        <p class="el-ado">字号</p>
+                        <p class="el-input"><input class="el-ctrol"><span class="el-input-u">px</span></p>
+                    </div>
+                    <div class="pgs-eline">
+                        <p class="el-ado">字号</p>
+                        <p class="el-input-noa"><input class="el-ctrol"></p>
+                    </div>
+                    <div class="pgs-eline">
+                        <p class="el-ado">样式对齐</p>
+                        <p class="el-group"><span class="el-group-btn">A-</span><span class="el-group-btn">A+</span><span class="el-group-btn">A+</span><span class="el-group-btn">A+</span></p>
+                    </div>
+                    <div class="pgs-eline">
+                        <p class="el-ado">字号</p>
+                        <p class="el-input el-fl el-wa el-mgra"><input class="el-ctrol"><span class="el-input-u">px</span></p>
+                        <p class="el-group el-fl el-wb"><span class="el-group-btn">A-</span><span class="el-group-btn">A+</span></p>
+                    </div>
+                    <div class="pgs-eline">
+                        <p class="el-lado">文本内容</p>
+                        <p class="el-textareaer"><textarea class="el-textarea"></textarea></p>
+                    </div>
+                    <!-- <div class="pgs-eline">
+                        <p class="el-ado">行高</p>
+                        <div class="el-slider">
+                            <p class="el-slider-bar"><span class="el-slider-po"></span></p>
+                            <p class="el-input"><input class="el-ctrol"><span class="el-input-u">px</span></p>
+                        </div>
+                    </div>
+                    <div class="pgs-eline">
+                        <p class="el-ado">行高</p>
+                        <div class="el-slider">
+                            <p class="el-slider-bar el-fl el-wc"><span class="el-slider-po"></span></p>
+                            <p class="el-input-noa el-fl el-wd"><input class="el-ctrol"></p>
+                        </div>
+                    </div>
+                    <div class="pgs-eline">
+                        <p class="el-ado">跳转配置</p>
+                        <div class="el-selecter">
+                            <p class="el-select el-fl"><input class="el-ctrol" /><span class="el-select-arr">&gt;</span></p>
+                        </div>
+                    </div> -->
+
+                </div>
+            </div>
+            
+        </div>
     </div>
+    <script language="javascript" type="text/javascript" src="./assets/js/jquery-2.1.4.min.js"></script>
+    <script language="javascript" type="text/javascript" src="./assets/js/vue.min.js"></script>
+    <script language="javascript" type="text/javascript" src="./template/template.js"></script>
+    <script language="javascript" type="text/javascript" src="./component/component.js"></script>
+    <script>
+        $(function(){
+
+            var pgtype_template = {
+                text:['text_title']
+            }
+
+            var pgtype = new Vue({
+                el:'#pgtype',
+                data:{
+                    type_active:'text',
+                    template_text:pgtype_template.text
+                },
+                created:function(){
+                    
+                },
+                methods:{
+                    change:function(type){
+                        this.type_active = type;
+                    }
+                }
+            })
+        })
+    </script>
 </body>
 </html>
