--- a/dome/index.html
+++ b/dome/index.html
@@ -19,7 +19,7 @@
     </style>
     <div class="bg">
             <div class="lsb" id="cont"></div>
-            <div class="lsb" id="cont">ipx</div>
+            <div class="lsb" id="cont">ipx-has-fit</div>
             <div class="lsb" id="conta"></div>
             <div class="lsb" id="contb"></div>
             <div class="lsb"><a href="indexa.html" style="text-decoration:underline">go-no-fit</a></div>
