--- a/dome/indexa.html
+++ b/dome/indexa.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width,viewport-fit=cover">
+	<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta content="black" name="apple-mobile-web-app-status-bar-style">
 	<meta name="format-detection" content="telephone=no">
@@ -19,7 +19,7 @@
     </style>
     <div class="bg">
             <div class="lsb" id="cont"></div>
-            <div class="lsb" id="cont">ipxs</div>
+            <div class="lsb" id="cont">ipx-no-fit</div>
             <div class="lsb" id="conta"></div>
             <div class="lsb" id="contb"></div>
             <div class="lsb"><a href="index.html" style="text-decoration:underline">go-has-fit</a></div>
