--- a/easyweb_webpack/src/pages/article.html
+++ b/easyweb_webpack/src/pages/article.html
@@ -8,14 +8,16 @@
         <meta name="format-detection" content="telephone=no">
         <meta content="telephone=no" name="format-detection">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+        <link rel="stylesheet" href="../font/iconfont.css" type="text/css" />
         <link href="../css/base.css" rel="stylesheet" type="text/css" />
         <link href="../css/article.css" rel="stylesheet" type="text/css" />
         <link href="../font/iconfont.css?v=<%= htmlWebpackPlugin.options.hashkey %>" rel="stylesheet" type="text/css" />
         <title>长文本模版</title>
     </head>
     <body>
-        <div id="app" class="html"></div>
-        <div id="appa" class="html"></div>
+        <div id="J_topline" class="pg-top"></div>
+        <div id="J_pgleft" class="pg-left"></div>
+        <div id="J_pgcontent" class="page-content"></div>
 
 
         <script language="javascript" type="text/javascript" src="../javascripts/manifest.js"></script>
