--- a/test/PDF.js/web/viewer.html
+++ b/test/PDF.js/web/viewer.html
@@ -248,6 +248,7 @@ See https://github.com/adobe-type-tools/cmap-resources
       </menu>
 
       <div id="viewerContainer" tabindex="0">
+          <div class="viewaddloading">正在加载···<span class="viewaddloading-row"></span></div>
         <div id="viewer" class="pdfViewer"></div>
       </div>
 
