--- a/shopdemo/public/index.html
+++ b/shopdemo/public/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>shopdemo</title>
+    <title>电商模板</title>
     <link href="//at.alicdn.com/t/font_1554141_0btps5v0zuje.css" rel="stylesheet" type="text/css">
     <!-- <script src="<%= BASE_URL %>common/vconsole.min.js"></script> -->
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but shopdemo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but 电商模板 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
